@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -50,8 +50,8 @@ class TestDeepImageConverter( IECoreHoudini.TestCase ) :
 		converter = IECore.DeepImageConverter()
 		self.failUnless( isinstance( converter, IECore.DeepImageConverter ) )
 		self.assertEqual( converter.typeId(), IECore.TypeId.DeepImageConverter )
-		self.assertEqual( converter.parameters()['inputFile'].extensions, [ "rat" ] )
-		self.assertEqual( converter.parameters()['outputFile'].extensions, [ "rat" ] )
+		self.failUnless( "rat" in converter.parameters()['inputFile'].extensions )
+		self.failUnless( "rat" in converter.parameters()['outputFile'].extensions )
 	
 	def testOperation( self ) :
 		
